8229345: Memory leak due to vtable stubs not being shared on SPARC

Reviewed-by: mdoerr, dholmes, kvn